# football-club

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: LANGGRAPH_ARCHITECTURE.md
src/football_club/: __init__.py  __main__.py  cli.py  cli_colors.py  config.py  logging.py  state.py
src/football_club/agents/: __init__.py  analyst.py  medical.py  orchestrator.py  scout.py  tools.py
src/football_club/graph/: __init__.py  workflow.py
tests/: test_smoke.py
